:recycle: Refactor: check 메서드 변경, toList 사용